--- a/templates/items/simple-sheet.hbs
+++ b/templates/items/simple-sheet.hbs
@@ -17,39 +17,64 @@
     {{!-- Body --}}
     <section class="tab-content flex-vertical">
       {{#if (test isGM "||" isEmbeddedItem)}}
-      <label class="tab-label">
-        <span class="tab-title">Description</span>
-      </label>
-      {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+      <div class="accordian-block">
+        <input type="radio" name="main" id="main-description" />
+        <label for="main-description" class="accordian-label">
+          <span class="accordian-block-title">Description</span>
+        </label>
+        <div class="accordian-contents tinymce">
+          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+        </div>
+      </div>
       {{/if}}
 
-      <label class="tab-label">
-        <span class="tab-title">Rules</span>
-      </label>
-      {{editor system.rules target="system.rules" button=true owner=owner editable=isGM}}
+      <div class="accordian-block">
+        <input type="radio" name="main" id="main-rules" checked />
+        <label for="main-rules" class="accordian-label">
+          <span class="accordian-block-title">Rules</span>
+        </label>
+        <div class="accordian-contents tinymce">
+          {{editor system.rules target="system.rules" button=true owner=owner editable=isGM}}
+        </div>
+      </div>
 
       {{#if (test isGM "||" system.notes)}}
-      <label class="tab-label">
-        <span class="tab-title">Notes</span>
-      </label>
-      {{editor system.notes target="system.notes" button=true owner=owner editable=isGM}}
+      <div class="accordian-block">
+        <input type="radio" name="main" id="main-notes" />
+        <label for="main-notes" class="accordian-label">
+          <span class="accordian-block-title">Notes</span>
+        </label>
+        <div class="accordian-contents tinymce">
+          {{editor system.notes target="system.notes" button=true owner=owner editable=isGM}}
+        </div>
+      </div>
       {{/if}}
 
       {{#if isGM}}
-      <label class="tab-label">
-        <span class="tab-title">GM Notes</span>
-      </label>
-      {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=isGM}}
+      <div class="accordian-block">
+        <input type="radio" name="main" id="main-gm-notes" />
+        <label for="main-gm-notes" class="accordian-label">
+          <span class="accordian-block-title">GM Notes</span>
+        </label>
+        <div class="accordian-contents tinymce">
+          {{editor system.gm_notes target="system.gm_notes" button=true owner=owner editable=isGM}}
+        </div>
+      </div>
       {{/if}}
 
       {{#if isGM}}
-      <label class="comp tab-label">
-        <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
-          <i class="fas fa-plus-square"></i>
-        </a>
-        <span class="tab-title">Active Effects</span>
-      </label>
-      {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+      <div class="accordian-block">
+        <input type="radio" name="main" id="main-active-effects" />
+        <label for="main-active-effects" class="comp accordian-label">
+          <a class="comp-control comp-button comp-add effect-control" data-action="create" title="Create Effect">
+            <i class="fas fa-plus-square"></i>
+          </a>
+          <span class="accordian-block-title">Active Effects</span>
+        </label>
+        <div class="accordian-contents">
+          {{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+        </div>
+      </div>
       {{/if}}
     </section>
     <section class="sheet-footer-small"></section>
