--- a/templates/roll/roll-collab-gm.hbs
+++ b/templates/roll/roll-collab-gm.hbs
@@ -1,4 +1,4 @@
-{{log "ROLL COLLAB GM CONTEXT" this}}
+{{eLog "ROLL COLLAB GM CONTEXT" this}}
 
 <form class="{{cssClass}} roll-collab-sheet roll-collab-sheet-gm" autocomplete="off">
   <div class="sheet-root">
