--- a/templates/roll/roll-collab.hbs
+++ b/templates/roll/roll-collab.hbs
@@ -1,4 +1,4 @@
-{{log "ROLL COLLAB CONTEXT" this}}
+{{eLog "ROLL COLLAB CONTEXT" this}}
 
 <form class="{{cssClass}} roll-collab-sheet roll-collab-sheet-pc" autocomplete="off">
   <div class="sheet-root">
